fix all the misplaced divs and rename multiple classes

--- a/index.html
+++ b/index.html
@@ -6,27 +6,40 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <!-- Main Container for all six sections -->
-        <div class="container">
-            <!-- Container of the header -->
-            <div class="header-section">
-                <div class="header-logo">Header Logo</div>
-                <ul>
-                    <li>header link one</li>
-                    <li>header link two</li>
-                    <li>header link three</li>
-                </ul>
+        <!-- Header Section -->
+        <div class="header">
+            <!-- Navigation Bar -->
+            <div class="nav-bar">
+                <!-- Logo Side -->
+                <div class="logo">
+                    <p>Header Logo</p>
+                </div>
+                <!-- Links side -->
+                <div class="links">
+                    <ul>
+                        <li><a href="#">header link one</a></li>
+                        <li><a href="#">header link two</a></li>
+                        <li><a href="#">header link three</a></li>
+                    </ul>
+                </div>
             </div>
-            <!-- Container for the description -->
-            <div class="description-section"></div>
-            <!-- Container for the images -->
-            <div class="image-section"></div>
-            <!-- Container for the quote -->
-            <div class="quote-section"></div>
-            <!-- Container for the button -->
-            <div class="button-section"></div>
-            <!-- Container for the footer -->
-            <div class="footer-section"></div>
+
+            <!-- Hero Section (Welcome) -->
+            <div class="welcome">
+                <!-- Text Side -->
+                <div class="description">
+                    <h1 class="title">This website is awesome</h1>
+                    <p class="text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+                    <button class="button">Sign up</button>
+                </div>
+
+                <!-- Image Side -->
+                <div class="placeholder">
+                    <div class="image">
+                        <p>this is a placeholder for an image</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
