code the structure all over again due to a mistake in a previous structure

--- a/index.html
+++ b/index.html
@@ -3,18 +3,16 @@
     <head>
         <title>Landing Page</title>
         <meta charset="UTF-8">
+        <meta name="description" content="landing-page">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <!-- Header Section -->
         <div class="header">
-            <!-- Navigation Bar -->
             <div class="nav-bar">
-                <!-- Logo Side -->
                 <div class="logo">
                     <p>Header Logo</p>
                 </div>
-                <!-- Links side -->
                 <div class="links">
                     <ul>
                         <li><a href="#">header link one</a></li>
@@ -23,20 +21,15 @@
                     </ul>
                 </div>
             </div>
-
-            <!-- Hero Section (Welcome) -->
             <div class="welcome">
-                <!-- Text Side -->
                 <div class="description">
                     <h1 class="title">This website is awesome</h1>
                     <p class="text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
                     <button class="button">Sign up</button>
                 </div>
-
-                <!-- Image Side -->
                 <div class="placeholder">
                     <div class="image">
-                        <p>this is a placeholder for an image</p>
+                        <p class="paragraph">this is a placeholder for an image</p>
                     </div>
                 </div>
             </div>
