--- a/index.html
+++ b/index.html
@@ -34,5 +34,40 @@
                 </div>
             </div>
         </div>
+        <div class="main">
+            <h2>Some Random Information</h2>
+            <div class="card-container">
+                <div class="card">
+                    <div class="square"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+
+                <div class="card">
+                    <div class="square"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+
+                <div class="card">
+                    <div class="square"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+
+                <div class="card">
+                    <div class="square"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="quote">
+            <em>This is an inspiring quote, or a testimonial from a customer.
+                Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it
+                looks nice.</em>
+            <p>- Thor, God of Thunder</p>
+        </div>
+
+        <div class="sign-up">
+            
+        </div>
     </body>
 </html>
