finish up adding the quote and sign up sections, as well as the footer by using divs, associating classes and filling them up with different gibberish

--- a/index.html
+++ b/index.html
@@ -67,7 +67,19 @@
         </div>
 
         <div class="sign-up">
-            
+            <div class="container">
+                <div class="left">
+                    <strong>Call to action! It's time!</strong>
+                    <p class="click">Sign up for our product by clicking right over there!</p>
+                </div>
+                <div class="right">
+                    <button class="button">Sign up</button>
+                </div>
+            </div>
         </div>
+
+        <footer>
+            Copyright &copy; The Odin Project 2024
+        </footer>
     </body>
 </html>
